Fix: Remove invalid properties from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -15,9 +15,5 @@
       "type": "string"
     }
   ],
-  "buildOutputDirectory": ".next",
-  "publicSource": "./public",
-  "cleanUrls": true,
-  "skipDownload": false,
-  "crons": []
+  "cleanUrls": true
 }
