docs: Add comprehensive production environment setup guide with all required configuration changes

--- a/.env.example
+++ b/.env.example
@@ -31,4 +31,18 @@ NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 NODE_ENV=development
 
 # App URL (for redirects and callbacks)
+# ⚠️ UPDATE FOR PRODUCTION: Change http://localhost:3000 to your actual domain
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# API URL (used by client-side components for fetches)
+# ⚠️ UPDATE FOR PRODUCTION: Change http://localhost:3000 to your actual domain
+NEXT_PUBLIC_API_URL=http://localhost:3000
+
+# Next Auth URL (session configuration)
+# ⚠️ UPDATE FOR PRODUCTION: Change http://localhost:3000 to your actual domain
+NEXTAUTH_URL=http://localhost:3000
+
+# NextAuth Secret (for session signing)
+# ⚠️ CRITICAL: Generate a new secure secret for production
+# Generate with: openssl rand -base64 32
+NEXTAUTH_SECRET=your-secure-random-secret-here
