--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,32 +56,13 @@ jobs:
       - name: Check for vulnerabilities
         run: npm audit --production || true
 
-  deploy-preview:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Deploy to Vercel Preview
-        uses: vercel/action@v3
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-
   deploy-production:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: [lint-and-test, security-audit]
     
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Deploy to Vercel Production
-        uses: vercel/action@v3
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
+      - name: Trigger Vercel Deployment
+        run: |
+          echo "✅ CI/CD pipeline passed. Vercel will auto-deploy via GitHub integration."
+          echo "Check Vercel dashboard: https://vercel.com/dashboard"
