--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "lucide-react": "^0.454.0",
     "next": "15.5.7",
     "next-themes": "latest",
+    "nodemailer": "^7.0.12",
     "react": "19.1.0",
     "react-day-picker": "latest",
     "react-dom": "19.1.0",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
+    "resend": "^6.8.0",
     "sonner": "latest",
     "swr": "latest",
     "tailwind-merge": "^2.5.5",
@@ -68,6 +70,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
